--- a/Goldstein_Adam_L01.Rmd
+++ b/Goldstein_Adam_L01.Rmd
@@ -21,11 +21,25 @@ When completing the following questions ensure that that your solutions are clea
 
 Provide a brief outline/overview of the steps involved in a supervised machine learning process. Could provide this as a bulleted list. 
 
+Answer:
+
+- Gathering data
+- Prepping data
+- Choosing model
+- Training
+- Evaluating 
+- Tuning
+- Predicting 
+
 <br>
 
 ### Question 2
 
 Explain the difference between supervised and unsupervised learning.
+
+Answer: 
+
+Supervised learning is machine learning that uses trained models using labeled data. Models need to map the input variable with the output variable. Further, the model training must be supervised. Supervised learning can be used for classification and regression problems. Unsupervised learning is machine learning that uses patterns inferred from unlabeled input data. Labeled data is not needed for unsupervised learning because the machine finds patterns on its own. Unsupervised learning is used for clustering and association problems.
 
 <br>
 
@@ -33,11 +47,11 @@ Explain the difference between supervised and unsupervised learning.
 
 In general, we can classify a model by its purpose into 1 of the 3 categories below. Provide a brief description of the goals of these model classes.
 
-1. Descriptive Models: **YOUR DESCRIPTION**
+1. Descriptive Models: Summarizes characteristics of a dataset
 
-2. Inferential Models: **YOUR DESCRIPTION**
+2. Inferential Models: Test hypothesis or assess whether data is generalizable based on data
 
-3. Predictive Models: **YOUR DESCRIPTION**
+3. Predictive Models: Produce predictions about future data points given a past dataset
 
 <br>
 
