--- a/Goldstein_Adam_L01.Rmd
+++ b/Goldstein_Adam_L01.Rmd
@@ -62,31 +62,54 @@ We can further describe/classify predictive models by how they were derived or d
 #### Part A
 What does it mean to be a mechanistic model?
 
+Answer:
+
+A mechanistic model uses a theory to predict what will happen in the real world. Mechanistic models use mathematical expressions that best describe the physical or biological process.
 
 #### Part B
 What does it mean to be an empirically driven model?
 
+Answer:
+
+Empirical models use real-world events to develop a theory. The idea is that if you observe some particular outcome following some particular circumstance then you can reliably predict that outcome in the future.
 
 #### Part C
 How does the mechanistic and empirically driven model terminology relate to the parametric and nonparametric model terminology? 
 
+Answer:
+
+Parametric Methods uses a fixed number of parameters to build the model. Non-Parametric Methods use the flexible number of parameters to build the model. It would seem that mechanistic models are parametric methods and empirical models are nonparametric methods. 
 
 #### Part D
 In general, is a mechanistic or empirically driven model easier to understand? Explain.
 
+Answer:
+
+Mechanistic models are easier to understand because they are based on mathematical expressions, so there are clearer results. They are also based on concrete assumptions drawn from previous data points. 
 
 #### Part E
 How does mechanistic and empirically driven model terminology relate to the idea of model flexibility? That is, which would be more or less flexible than the other.
 
+Answer:
+
+Empirically driven models are more flexible than mechanistic models because they are based on more vague assumptions rather than concrete data points and mathematical expressions. 
 
 #### Part F
 Describe the bias-variance trade-off when considering the use of a mechanistic or empirically driven model. 
+
+Answer:
+
+The bias-variance trade-off is about finding the right balance between the two because the increase of one will result in the decrease of the other and vice versa. Empirically driven models are better for understanding this trade-off.
 
 <br>
 
 ### Question 5 
 
 Explain the difference between a regression and classification machine learning (ML) problems.
+
+Answer:
+
+Regression machine learning problems predict numeric outcomes, while classification machine learning problems are used to predict discrete values. A regression problem would ask for things like salary or age, while a classification problem would ask for things like Yes/No or True/False.
 
 <br>
 
@@ -96,7 +119,7 @@ When splitting the data, why is it useful to stratify by the outcome/target vari
 
 Answer:
 
-Stratified sampling splits a dataset such that each split is similar with respect to a particular variable. 
+Stratified sampling splits a dataset such that each split is similar with respect to a particular variable. Stratifying data also ensures that the sample and treatment groups are representative of the broader dataset.  
 
 <br>
 
@@ -104,11 +127,19 @@ Stratified sampling splits a dataset such that each split is similar with respec
 
 Briefly describe how v-fold cross validation with repeats is used to estimate test RMSE. Also provide an explanation of why we use it. 
 
+Answer:
+
+V-fold cross-validation is repeating the cross-validation procedure multipletimes and reporting the mean result across all folds from all runs. Performing more folds and resamples increases the accuracy of the overall resampling estimate. Although there are diminishing returns after hitting a certain point, using more resamples helps the accuracy. Cross-validation also gives models the chance to train on multiple train-test splits, which gives a better indication of how well the model will perform on unseen data. RMSE is root mean squared error determines the standard error of the mean. RMSE is lowered, ie error is lowered, when you cross-validate the data.
+
 <br>
 
 ### Question 8
 
 When might we use a bootstrap resampling procedure instead of v-fold cross validation to estimate test RMSE?
+
+Answer:
+
+We use bootstrapping resampling procedures instead of v-fold cross validation to estimate test RMSE when we are approximating the sampling distribution of statistics whose theoretical properties are intractable. A bootstrap sample of the training set is a sample that is the same size as the training set but is drawn with replacement. This means that some training set data points are selected multiple times for the analysis set. Bootstrap samples produce performance estimates that have very low variance (unlike cross-validation) but have significant pessimistic bias. 
 
 <br>
 
@@ -116,13 +147,25 @@ When might we use a bootstrap resampling procedure instead of v-fold cross valid
 
 Briefly describe model tuning and why we use it.
 
+Answer:
+
+Tuning is the process of maximizing a model's performance by selecting appropriate “hyperparameters.” Model tuning allows us to customize our models so they generate the most accurate outcomes and give us highly valuable insights into our data.
+
 <br>
 
 ### Question 10 
 
 What are two common performance metrics when dealing with a regression ML problem?
 
+Answer:
+
+RMSE and MAe
+
 What are two common performance metrics when dealing with a classification ML problem?
+
+Answer:
+
+Confusion Matrix and AUC-ROC curve
 
 <br>
 
@@ -132,9 +175,15 @@ A political candidate's campaign has detailed voter history data for their const
 
 1. Given a voter's profile/data how likely is it that they will vote in favor of the candidate?
 
+Answer:
+
+Predictive because we use a voter's profile and predict a numeric outcome given a dataset of other instances with other voters. We use previous trials to predict this trial.  
+
 1. How would a voter's likelihood of support for the candidate change if they had personal contact with the candidate?
 
-Classify each question/problem as either prediction or inferential. Explain your reasoning for each.
+Answer:
+
+Inferential because we are not predicting anything numeric. We use a change in a single variable to see if there is a difference in outcome. 
 
 <br>
 
